posiGen_FullsendBox/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Modeled_Energy_Data_Source__c</fullName>
        <label>Modeled Energy Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>Bright Harvest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Watts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurora</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Modeled_Energy_December__c</fullName>
        <label>Modeled Energy - December</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_Energy_February__c</fullName>
        <label>Modeled Energy - February</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_Energy_July__c</fullName>
        <label>Modeled Energy - July</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_Energy_June__c</fullName>
        <label>Modeled Energy - June</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_Energy_March__c</fullName>
        <label>Modeled Energy - March</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_Energy_May__c</fullName>
        <label>Modeled Energy - May</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_Energy_November__c</fullName>
        <label>Modeled Energy - November</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_Energy_October__c</fullName>
        <label>Modeled Energy - October</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_Energy_September__c</fullName>
        <label>Modeled Energy - September</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modeled_imp__c</fullName>
        <description>Modeled percentage improvement</description>
        <inlineHelpText>Enter the modeled percentage improvement.</inlineHelpText>
        <label>Modeled % imp</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Modeling_software__c</fullName>
        <description>Pick software used for energy modeling</description>
        <inlineHelpText>Pick the software used for energy modeling</inlineHelpText>
        <label>Modeling software</label>
        <picklist>
            <picklistValues>
                <fullName>Optimiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REMRate</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>REM Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TREAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAKE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HHES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Recent Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Move_on_letter_date__c</fullName>
        <description>Date that the cancellation letter was sent.</description>
        <label>Move on letter date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NMIA_Received_Date__c</fullName>
        <inlineHelpText>EIA Received Date</inlineHelpText>
        <label>NMIA Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NMIA_Request_to_Verify_Age__c</fullName>
        <formula>PV_Net_Meter_Install_Verified_Date__c  -  NMIA_Request_to_Verify_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NMIA Request to Verify Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NMIA_Request_to_Verify_Date__c</fullName>
        <inlineHelpText>The date requested to check that the NMIA (EIA) is actually received.</inlineHelpText>
        <label>NMIA Request to Verify Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NMIA_Submitted_Age__c</fullName>
        <description>The number of days between the NMIA Submitted Date and the NMIA Received Date.</description>
        <formula>NMIA_Received_Date__c  -  NMIA_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NMIA Submitted Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NMIA_Submitted_Date__c</fullName>
        <inlineHelpText>Neter Meter Interconnect Agreement Submitted to the Utility Company.</inlineHelpText>
        <label>NMIA Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NOC_Submitted_Date__c</fullName>
        <label>NOC Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Meter_Install_Scheduled_Date__c</fullName>
        <inlineHelpText>This is the date the Utility Company tell us the Net Meter will be installed.</inlineHelpText>
        <label>Net Meter Install Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Meter_Status__c</fullName>
        <label>Net Meter Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Set</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Net Meter Install Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Requesting Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address Discrepancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid NMIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Electricity Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informed Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Final Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Production Analyses.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Install Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Utility Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Unable To Access Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Net Meter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Assessment_Reason__c</fullName>
        <label>New Assessment Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Need Clarification from Assessor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_Of_Milestones__c</fullName>
        <label>Number Of Milestones</label>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Tasks__c</fullName>
        <label>Number of Open Tasks</label>
        <summarizedField>Milestone__c.Number_of_Open_Tasks__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Planned_Arrays__c</fullName>
        <label># of Planned Arrays</label>
        <summaryForeignKey>Planned_Arrays__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Systems__c</fullName>
        <description>This is the number of Systems created for this project.</description>
        <label>Number of Systems</label>
        <summaryForeignKey>Systems__c.Install_Project_Created_On__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Tasks__c</fullName>
        <label>Number of Tasks</label>
        <summarizedField>Milestone__c.Number_of_Tasks__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opp_Customer_Liaison_Email_Static__c</fullName>
        <description>This is to allow the workflow rules to send an email to the CL.   This is updated by a field update which inspects the Opp Customer Liaison Email formula field.</description>
        <label>Opp Customer Liaison Email Static</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opp_GG_Number__c</fullName>
        <formula>Opportunity__r.GG_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp GG Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_Email_Static__c</fullName>
        <description>This is to allow the workflow rules to send an email to the Opp Owner.   This is updated by a field update which inspects the Opp Owner Email formula field.</description>
        <label>Opp Owner Email Static</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opp_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName + &quot; &quot; +  Opportunity__r.Owner.LastName</formula>
        <label>Opp Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Pipeline_Stage__c</fullName>
        <formula>Opportunity__r.Pipeline_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Pipeline Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Transaction_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Transaction_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Address__c</fullName>
        <formula>Opportunity__r.Account_Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_City__c</fullName>
        <formula>Opportunity__r.Account_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contract_Approved_Date__c</fullName>
        <formula>Opportunity__r.Contracts_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Contract Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_EE_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.EE_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity EE Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_First_Name__c</fullName>
        <formula>Opportunity__r.Account.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Has_EE__c</fullName>
        <formula>Opportunity__r.Has_EE_as_a_Solar_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Has EE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Last_Name__c</fullName>
        <formula>Opportunity__r.Account.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Numeric_ID__c</fullName>
        <formula>VALUE( Opportunity__r.Numeric_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Numeric ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Numeric_ID_c__c</fullName>
        <formula>TEXT(Opportunity_Numeric_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Numeric ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>Opportunity__r.RecordType.DeveloperName</formula>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_State__c</fullName>
        <formula>Opportunity__r.Account_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ZIP_Code__c</fullName>
        <formula>Opportunity__r.Account_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ZIP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordered_Date__c</fullName>
        <label>Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVFA_DC_to_AC_Derate_Factor__c</fullName>
        <label>PVFA DC-to-AC Derate Factor</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVFA_Inverter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PVFA Inverter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Serialized_Item__c.Item_Group__c</field>
                <operation>equals</operation>
                <value>Inverter</value>
            </filterItems>
            <infoMessage>Input one of the following keywords to see the inverter selection:
Power One
SMA
SE (for Solar Edge)
Fronius
Enph (for Enphase)</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Serialized_Item__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PVFA_Module_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PVFA Module Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Serialized_Item__c.Item_Group__c</field>
                <operation>equals</operation>
                <value>Panels</value>
            </filterItems>
            <infoMessage>Input one of the following keywords to see the module selection:
Hyundai
Talesun
Mitsubishi
Yingli
SLA (for old Silfab panels)
4250440 for SLA260M3A
4250443 for SLA280M3A
4250444 for SBA260P3A
Renesola</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Serialized_Item__c</referenceTo>
        <relationshipLabel>Projects (PVFA Module Model)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PVFA_Module_Rating_W_From_Feasibility__c</fullName>
        <description>From Feasibility project</description>
        <label>PVFA Module Rating (W) From Feasibility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVFA_Module_Rating_W__c</fullName>
        <formula>PVFA_Module_Model__r.Rating__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PVFA Module Rating (W)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVFA_Number_of_Modules__c</fullName>
        <label>PVFA # of Modules</label>
        <summarizedField>Planned_Arrays__c.Number_of_Modules__c</summarizedField>
        <summaryForeignKey>Planned_Arrays__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PVFA_System_Size_kW__c</fullName>
        <formula>PVFA_Number_of_Modules__c *  PVFA_Module_Rating_W__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PVFA System Size (kW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVI_Activation_Complete_Date__c</fullName>
        <inlineHelpText>This is coming from the PVI Activation Task</inlineHelpText>
        <label>PVI Activation Complete Date</label>
        <summarizedField>Milestone__c.PVI_Activation_Complete_Date__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PVI_Activation_Date__c</fullName>
        <description>This is the date the system was activated (i.e. producing power).</description>
        <inlineHelpText>This is the date the system was activated (i.e. producing power).</inlineHelpText>
        <label>PVI Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVI_Electrical_Installed_Date__c</fullName>
        <label>PVI Electrical Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVI_Electrical_Left_Warehouse_Date__c</fullName>
        <label>PVI Electrical Left Warehouse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVI_Electrical_Scheduled_Date__c</fullName>
        <label>PVI Electrical Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVI_Installation_Comments__c</fullName>
        <label>PVI Installation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PVI_Panels_Installed_Date__c</fullName>
        <label>PVI Panels Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVI_Placed_In_Service_Date__c</fullName>
        <description>This is the date that the subcontractor installs the electrical (which is the final portion) of the PV system.</description>
        <inlineHelpText>This is the date that the subcontractor installs the electrical (which is the final portion) of the PV system and declares it &quot;Placed in Service&quot;.</inlineHelpText>
        <label>PVI Placed In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVI_PowerDash_System_Name__c</fullName>
        <description>System Name in PowerDash</description>
        <label>PowerDash System Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PVI_Rails_Installed_Date__c</fullName>
        <label>PVI Rails Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVI_Rails_Scheduled_Date__c</fullName>
        <label>PVI Rails Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVI_Rails_and_Panels_Left_Warehouse_Date__c</fullName>
        <label>PVI Rails and Panels Left Warehouse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVI_System_Installed_On__c</fullName>
        <description>This is based on the &quot;Install Electrical&quot; Task.</description>
        <label>PVI System Installed On</label>
        <summarizedField>Milestone__c.PV_System_Installed_On__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PV_Feasibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PV Feasibility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>PV Feasibility</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>PV Install</relationshipLabel>
        <relationshipName>PV_Feasibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PV_Installer__c</fullName>
        <formula>Opportunity__r.PV_Installer_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PV Installer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Net_Meter_Install_Verified_Date__c</fullName>
        <inlineHelpText>This is the date PG verifies that the Net Meter has been installed (visually in the field).</inlineHelpText>
        <label>Net Meter Install Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PV_Removal_Comments__c</fullName>
        <label>PV Removal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PV_Scheduled_Start_Date__c</fullName>
        <description>Scheduled Start Date</description>
        <label>PV Site Assessment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PV_Uninstall_Date__c</fullName>
        <inlineHelpText>Date that the system is pulled off the roof.</inlineHelpText>
        <label>PV Uninstall Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Panel_Manufacturer__c</fullName>
        <description>Picklist for Panel Manufacturers</description>
        <label>Panel Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renesola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silfab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talesun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trinasol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yingli</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Panel_Wattage__c</fullName>
        <label>Panel Wattage</label>
        <picklist>
            <picklistValues>
                <fullName>225W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>235W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>240W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>245W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>260W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>265W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>270W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>275W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>280W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>285W</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Performance_bonus__c</fullName>
        <description>Performance bonus for the contractors based on ACH from the Sushi list</description>
        <inlineHelpText>Performance bonus for the contractors based on ACH from the Sushi list</inlineHelpText>
        <label>Performance bonus</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Perimeter_Secured_Taped_Off__c</fullName>
        <label>Perimeter Secured &amp; Taped Off</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permanent_Removal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permanent Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_System_Yeild_kWh_yr__c</fullName>
        <label>Planned System Yeild (kWh/yr)</label>
        <summarizedField>Planned_Arrays__c.Yeild_kWh_yr__c</summarizedField>
        <summaryForeignKey>Planned_Arrays__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Plumbing_Permit_Applied_For_Date__c</fullName>
        <label>Plumbing Permit Applied For Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plumbing_Permit_Received_Date__c</fullName>
        <label>Plumbing Permit Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PowerDash_Address__c</fullName>
        <label>PowerDash Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerDash_URL__c</fullName>
        <formula>HYPERLINK(&apos;http://www.powerdash.com/account/systems/&apos; &amp;  PowerDash__c , &apos;PD Link&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the INTERNAL Powerdash link - do not give to customers.</inlineHelpText>
        <label>PowerDash URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerDash_User_Input_System_ID__c</fullName>
        <description>This is the ID the user can manually type in PowerDash for the System</description>
        <label>PowerDash User Input System ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerDash__c</fullName>
        <description>This is the PowerDash System ID, note 2 meters can be at one PowerDash home</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the System ID</inlineHelpText>
        <label>PowerDash System ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreSF2_Legacy_EE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Pre-SF2 EE record this Project came from.</inlineHelpText>
        <label>PreSF2 Legacy EE</label>
        <referenceTo>Energy_Efficiency__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Assessment_Combiner_Box__c</fullName>
        <formula>TEXT(Opportunity__r.Pre_Assessment_Combiner_Box__c )</formula>
        <label>Pre-Assessment Combiner Box</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Assessment_Electrical__c</fullName>
        <formula>TEXT( Opportunity__r.Pre_Assessment_Electrical__c )</formula>
        <label>Pre-Assessment Electrical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Inspection_of_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre Inspection of Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Verification_Date__c</fullName>
        <label>Production Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Age__c</fullName>
        <formula>Today() -  Kickoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days Since Kickoff</inlineHelpText>
        <label>Project Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>Opportunity__r.Project_Manager__r.FirstName  &amp; &quot; &quot; &amp;  Opportunity__r.Project_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number_Link__c</fullName>
        <formula>HYPERLINK( Id , Project_Number__c,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a version of the project number field which hyperlinks to the Project detail.</inlineHelpText>
        <label>Project Number Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <displayFormat>PROJ-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Projected_EE_savings__c</fullName>
        <description>Projected savings</description>
        <formula>(Modeled_Annual_Therms_Savings__c * 1.83) +(Modeled_Annual_kWh_Savings__c  * 0.105)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Projected savings based on $.105 kWh and $1.83 therm</inlineHelpText>
        <label>Projected EE savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projects1_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System</label>
        <referenceTo>Systems__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QC_Date__c</fullName>
        <inlineHelpText>Date the QC was completed</inlineHelpText>
        <label>QC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QC_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if install has passed acceptance test</inlineHelpText>
        <label>QC Passed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>